packages/assui/src/single-img-upload/style/index.less
@import '~antd/lib/style/index.less';
@import '../../style/variables.less';

@progress-prefix-cls: ~'@{ant-prefix}';

.as-img-upload {
  width: 335px;
  height: 140px;
  border: 1px solid @color_cacaca;
  border-radius: 4px;

  &:hover {
    border: 1px solid @color_1890ff;
  }

  .rc-upload,
  &:focus {
    outline: none;
  }

  &-button {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    overflow: hidden;
    cursor: pointer;

    &:focus {
      outline: none;
    }
  }

  &-content {
    position: relative;
    z-index: 1010;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: @white;
  }

  &-close-button {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 10;
    width: 20px;
    height: 20px;
    text-align: center;
    background-color: @black;
    cursor: pointer;
    opacity: 0.6;

    .spotecicon {
      width: 15px;
      height: 15px;
      color: @white;
    }
  }

  .preview-img {
    max-width: 100%;
  }

  &-preview {
    display: flex;
    align-items: center;
    height: 100%;
  }

  & &-upload-progress {
    position: absolute;
    top: 50%;
    left: 0;
    z-index: 2;
    transform: translateY(-34%);

    .@{ant-prefix}-progress-outer {
      padding: 0 20px;
    }

    .@{ant-prefix}-progress-text {
      display: block;
      width: 100%;
      color: @white;
      text-align: center;
    }
  }

  .@{ant-prefix}-spin-container,
  .@{ant-prefix}-spin-nested-loading {
    height: 100%;
  }
}

.init-disable {
  color: rgba(0, 0, 0, 25%);
  background-color: @color_f5f5f5;
  cursor: not-allowed;
}

